# core/swagger/swagger.yaml
@@ -75,6 +75,24 @@ paths:
       summary: Get Port Scan Result
       tags:
       - PortScan
+  /api/v1/port/clear:
+    delete:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Clear and save data in last 7 days
+      tags:
+      - PortScan
   /api/v1/port/location:
     get:
       consumes:
@@ -91,6 +109,24 @@ paths:
           schema:
             $ref: '#/definitions/models.Response'
       summary: GroupBy Location
+      tags:
+      - PortScan
+  /api/v1/port/trend:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: last 7 days scan trend
       tags:
       - PortScan
   /api/v1/rule:
